# ListenToList

./: .gitignore  AGENTS.md  bun.lockb  findings.md  package.json  player-progress-seek-issues.md  progress.md  report.md  task_plan.md
.github/workflows/: release.yml
android/: build.gradle.kts
android/app/: build.gradle.kts
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/gradle/: libs.versions.toml
docs/: android-validation-env.md  playback-second-wave.md  storage-search.md
rust-libs/ease-client-backend/: Cargo.toml
rust-libs/ease-client-backend/src/: ctx.rs
rust-libs/ease-client-schema/: Cargo.toml
rust-libs/ease-client-schema/src/: lib.rs
rust-libs/ease-client-schema/src/v2/: models.rs  shared.rs
rust-libs/ease-client-schema/src/v3/: objects.rs
rust-libs/ease-client-schema/src/v3/models/: playlist.rs
rust-libs/ease-client-schema/src/v4/: mod.rs  objects.rs  upgrader.rs
rust-libs/ease-client-schema/src/v4/repositories/: bin.rs  defs.rs  mod.rs
rust-libs/ease-client-schema/src/v5/: upgrader.rs
rust-libs/ease-client-schema/src/v5/models/: playlist.rs  storage.rs
rust-libs/ease-client-schema/src/v5/repositories/: bin.rs  defs.rs
rust-libs/ease-client-schema/tests/: data.redb
rust-libs/ease-remote-storage/: Cargo.toml
rust-libs/ease-remote-storage/src/: backend.rs  lib.rs
rust-libs/ease-remote-storage/tests/: openlist_integration.rs
scripts/: base.ts  build-apk.ts  build-jni-libs.ts  doctor-android-env.sh  mock-playback-server.ts  smoke-android.ts
(+182 files in other folders)
