[package]
name = "ease-client-schema"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
ease-order-key = { workspace = true }
serde = { workspace = true }
redb = { workspace = true }
uniffi = { workspace = true }
bitcode = { workspace = true }
postcard = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.17.1"
